// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Works with the cache 1`] = `
Object {
  "height": 451,
  "images": Array [
    Object {
      "height": 451,
      "path": "foobar/0cbf4e06fb8adef26b85a194fc9d4c5d-501.jpg",
      "width": 501,
    },
  ],
  "src": "foobar/0cbf4e06fb8adef26b85a194fc9d4c5d-501.jpg",
  "srcSet": "foobar/0cbf4e06fb8adef26b85a194fc9d4c5d-501.jpg 501w",
  "toString": [Function],
  "width": 501,
}
`;

exports[`creates jpeg extension 1`] = `
Object {
  "height": 395,
  "images": Array [
    Object {
      "height": 395,
      "path": "foobar/83668d4ed1a220793779ce668446f3c2-439.jpeg",
      "width": 439,
    },
  ],
  "src": "foobar/83668d4ed1a220793779ce668446f3c2-439.jpeg",
  "srcSet": "foobar/83668d4ed1a220793779ce668446f3c2-439.jpeg 439w",
  "toString": [Function],
  "width": 439,
}
`;

exports[`disable 1`] = `
Object {
  "images": Array [
    Object {
      "height": 100,
      "path": "foobar/8467bdd6e6ee43692327aa8efb258fd4-100.jpg",
      "width": 100,
    },
  ],
  "src": "foobar/8467bdd6e6ee43692327aa8efb258fd4-100.jpg",
  "srcSet": "foobar/8467bdd6e6ee43692327aa8efb258fd4-100.jpg",
  "toString": [Function],
}
`;

exports[`doesn't emit file 1`] = `
Object {
  "height": 225,
  "images": Array [
    Object {
      "height": 225,
      "path": "foobar/96ace3b661e096e716b4a62bcc3934d2-250.jpg",
      "width": 250,
    },
  ],
  "src": "foobar/96ace3b661e096e716b4a62bcc3934d2-250.jpg",
  "srcSet": "foobar/96ace3b661e096e716b4a62bcc3934d2-250.jpg 250w",
  "toString": [Function],
  "width": 250,
}
`;

exports[`jpg to webp 1`] = `
Object {
  "height": 900,
  "images": Array [
    Object {
      "height": 450,
      "path": "foobar/7f504de41e9e641521569e46d7c339ff-500.webp",
      "width": 500,
    },
    Object {
      "height": 675,
      "path": "foobar/89c1d47924fefa2b33b8b6f1d343dab0-750.webp",
      "width": 750,
    },
    Object {
      "height": 900,
      "path": "foobar/d002bffca8dea375467f089165593f94-1000.webp",
      "width": 1000,
    },
  ],
  "src": "foobar/d002bffca8dea375467f089165593f94-1000.webp",
  "srcSet": "foobar/7f504de41e9e641521569e46d7c339ff-500.webp 500w,foobar/89c1d47924fefa2b33b8b6f1d343dab0-750.webp 750w,foobar/d002bffca8dea375467f089165593f94-1000.webp 1000w",
  "toString": [Function],
  "width": 1000,
}
`;

exports[`multiple sizes 1`] = `
Object {
  "height": 900,
  "images": Array [
    Object {
      "height": 450,
      "path": "foobar/78a57c37d73de1a0df2e5e84a7c3a493-500.jpg",
      "width": 500,
    },
    Object {
      "height": 900,
      "path": "foobar/03fe31cc7d34b5317390ef55eaf9bc12-1000.jpg",
      "width": 1000,
    },
  ],
  "src": "foobar/03fe31cc7d34b5317390ef55eaf9bc12-1000.jpg",
  "srcSet": "foobar/78a57c37d73de1a0df2e5e84a7c3a493-500.jpg 500w,foobar/03fe31cc7d34b5317390ef55eaf9bc12-1000.jpg 1000w",
  "toString": [Function],
  "width": 1000,
}
`;

exports[`output first resized image height & width 1`] = `
Object {
  "height": 450,
  "images": Array [
    Object {
      "height": 450,
      "path": "foobar/78a57c37d73de1a0df2e5e84a7c3a493-500.jpg",
      "width": 500,
    },
  ],
  "src": "foobar/78a57c37d73de1a0df2e5e84a7c3a493-500.jpg",
  "srcSet": "foobar/78a57c37d73de1a0df2e5e84a7c3a493-500.jpg 500w",
  "toString": [Function],
  "width": 500,
}
`;

exports[`output should be in outputPath dir 1`] = `
Object {
  "height": 900,
  "images": Array [
    Object {
      "height": 450,
      "path": "foobar/img/78a57c37d73de1a0df2e5e84a7c3a493-500.jpg",
      "width": 500,
    },
    Object {
      "height": 675,
      "path": "foobar/img/7d2980f5976397657aae4e66161cc660-750.jpg",
      "width": 750,
    },
    Object {
      "height": 900,
      "path": "foobar/img/03fe31cc7d34b5317390ef55eaf9bc12-1000.jpg",
      "width": 1000,
    },
  ],
  "src": "foobar/img/03fe31cc7d34b5317390ef55eaf9bc12-1000.jpg",
  "srcSet": "foobar/img/78a57c37d73de1a0df2e5e84a7c3a493-500.jpg 500w,foobar/img/7d2980f5976397657aae4e66161cc660-750.jpg 750w,foobar/img/03fe31cc7d34b5317390ef55eaf9bc12-1000.jpg 1000w",
  "toString": [Function],
  "width": 1000,
}
`;

exports[`output should be relative to context 1`] = `
Object {
  "height": 900,
  "images": Array [
    Object {
      "height": 450,
      "path": "foobar/test/78a57c37d73de1a0df2e5e84a7c3a493-500x450.jpg",
      "width": 500,
    },
    Object {
      "height": 675,
      "path": "foobar/test/7d2980f5976397657aae4e66161cc660-750x675.jpg",
      "width": 750,
    },
    Object {
      "height": 900,
      "path": "foobar/test/03fe31cc7d34b5317390ef55eaf9bc12-1000x900.jpg",
      "width": 1000,
    },
  ],
  "src": "foobar/test/03fe31cc7d34b5317390ef55eaf9bc12-1000x900.jpg",
  "srcSet": "foobar/test/78a57c37d73de1a0df2e5e84a7c3a493-500x450.jpg 500w,foobar/test/7d2980f5976397657aae4e66161cc660-750x675.jpg 750w,foobar/test/03fe31cc7d34b5317390ef55eaf9bc12-1000x900.jpg 1000w",
  "toString": [Function],
  "width": 1000,
}
`;

exports[`override min and max with size 1`] = `
Object {
  "height": 90,
  "images": Array [
    Object {
      "height": 90,
      "path": "foobar/302660d6c51872dc000ff683ee877462-100.jpg",
      "width": 100,
    },
  ],
  "src": "foobar/302660d6c51872dc000ff683ee877462-100.jpg",
  "srcSet": "foobar/302660d6c51872dc000ff683ee877462-100.jpg 100w",
  "toString": [Function],
  "width": 100,
}
`;

exports[`override min and max with sizes 1`] = `
Object {
  "height": 180,
  "images": Array [
    Object {
      "height": 90,
      "path": "foobar/302660d6c51872dc000ff683ee877462-100.jpg",
      "width": 100,
    },
    Object {
      "height": 180,
      "path": "foobar/86261b3186993e29d0f8ddf966aeb9af-200.jpg",
      "width": 200,
    },
  ],
  "src": "foobar/86261b3186993e29d0f8ddf966aeb9af-200.jpg",
  "srcSet": "foobar/302660d6c51872dc000ff683ee877462-100.jpg 100w,foobar/86261b3186993e29d0f8ddf966aeb9af-200.jpg 200w",
  "toString": [Function],
  "width": 200,
}
`;

exports[`parses json notation 1`] = `
Object {
  "height": 180,
  "images": Array [
    Object {
      "height": 45,
      "path": "foobar/694d7c423117fe6fb103c261127c6fe6-50.webp",
      "width": 50,
    },
    Object {
      "height": 90,
      "path": "foobar/bc6b3464f2a93d19606f32cba5ef312c-100.webp",
      "width": 100,
    },
    Object {
      "height": 180,
      "path": "foobar/a78f2855faa677a53794dd5251c6b252-200.webp",
      "width": 200,
    },
  ],
  "src": "foobar/a78f2855faa677a53794dd5251c6b252-200.webp",
  "srcSet": "foobar/694d7c423117fe6fb103c261127c6fe6-50.webp 50w,foobar/bc6b3464f2a93d19606f32cba5ef312c-100.webp 100w,foobar/a78f2855faa677a53794dd5251c6b252-200.webp 200w",
  "toString": [Function],
  "width": 200,
}
`;

exports[`png 1`] = `
Object {
  "height": 595,
  "images": Array [
    Object {
      "height": 580,
      "path": "foobar/3cc2498602702597270522eed2774f4a-500.png",
      "width": 500,
    },
    Object {
      "height": 595,
      "path": "foobar/441052e71b6979cdaad82ca4441238f6-513.png",
      "width": 513,
    },
  ],
  "src": "foobar/441052e71b6979cdaad82ca4441238f6-513.png",
  "srcSet": "foobar/3cc2498602702597270522eed2774f4a-500.png 500w,foobar/441052e71b6979cdaad82ca4441238f6-513.png 513w",
  "toString": [Function],
  "width": 513,
}
`;

exports[`png to avif 1`] = `
Object {
  "height": 595,
  "images": Array [
    Object {
      "height": 595,
      "path": "foobar/5a36f8476717b2c46a1f23874299d6a0-513.avif",
      "width": 513,
    },
  ],
  "src": "foobar/5a36f8476717b2c46a1f23874299d6a0-513.avif",
  "srcSet": "foobar/5a36f8476717b2c46a1f23874299d6a0-513.avif 513w",
  "toString": [Function],
  "width": 513,
}
`;

exports[`png to avif 2`] = `
Object {
  "height": 900,
  "images": Array [
    Object {
      "height": 450,
      "path": "foobar/a3114f960be94671b134640079dfa763-500.avif",
      "width": 500,
    },
    Object {
      "height": 675,
      "path": "foobar/b102682dd39a4d79ea5e1cf597bbd9d6-750.avif",
      "width": 750,
    },
    Object {
      "height": 900,
      "path": "foobar/710766ccd533446899bf1f40a5d467c1-1000.avif",
      "width": 1000,
    },
  ],
  "src": "foobar/710766ccd533446899bf1f40a5d467c1-1000.avif",
  "srcSet": "foobar/a3114f960be94671b134640079dfa763-500.avif 500w,foobar/b102682dd39a4d79ea5e1cf597bbd9d6-750.avif 750w,foobar/710766ccd533446899bf1f40a5d467c1-1000.avif 1000w",
  "toString": [Function],
  "width": 1000,
}
`;

exports[`png to jpeg with background color 1`] = `
Object {
  "height": 595,
  "images": Array [
    Object {
      "height": 580,
      "path": "foobar/8ef290c6aa9a99c26c88b600f62e8c73-500.jpg",
      "width": 500,
    },
    Object {
      "height": 595,
      "path": "foobar/fda6d212d96bfa688c5895e30079bf26-513.jpg",
      "width": 513,
    },
  ],
  "src": "foobar/fda6d212d96bfa688c5895e30079bf26-513.jpg",
  "srcSet": "foobar/8ef290c6aa9a99c26c88b600f62e8c73-500.jpg 500w,foobar/fda6d212d96bfa688c5895e30079bf26-513.jpg 513w",
  "toString": [Function],
  "width": 513,
}
`;

exports[`png to webp with transparent background 1`] = `
Object {
  "height": 595,
  "images": Array [
    Object {
      "height": 580,
      "path": "foobar/efbbe56c2c29698c524ea3d6c104c453-500.webp",
      "width": 500,
    },
    Object {
      "height": 595,
      "path": "foobar/f359c3bb5fc56fcc3e75193058a4311c-513.webp",
      "width": 513,
    },
  ],
  "src": "foobar/f359c3bb5fc56fcc3e75193058a4311c-513.webp",
  "srcSet": "foobar/efbbe56c2c29698c524ea3d6c104c453-500.webp 500w,foobar/f359c3bb5fc56fcc3e75193058a4311c-513.webp 513w",
  "toString": [Function],
  "width": 513,
}
`;

exports[`preserves rotation 1`] = `
Object {
  "height": 554,
  "images": Array [
    Object {
      "height": 554,
      "path": "foobar/7acf753645105aca043bba1037734416-499.jpg",
      "width": 499,
    },
  ],
  "src": "foobar/7acf753645105aca043bba1037734416-499.jpg",
  "srcSet": "foobar/7acf753645105aca043bba1037734416-499.jpg 499w",
  "toString": [Function],
  "width": 499,
}
`;

exports[`progressive image 1`] = `
Object {
  "height": 864,
  "images": Array [
    Object {
      "height": 684,
      "path": "foobar/a366eedb0a0ae21632438e6d488e8365-760.jpg",
      "width": 760,
    },
    Object {
      "height": 864,
      "path": "foobar/481f41d88cf3a0a41fd3f6a076222c68-960.jpg",
      "width": 960,
    },
  ],
  "src": "foobar/481f41d88cf3a0a41fd3f6a076222c68-960.jpg",
  "srcSet": "foobar/a366eedb0a0ae21632438e6d488e8365-760.jpg 760w,foobar/481f41d88cf3a0a41fd3f6a076222c68-960.jpg 960w",
  "toString": [Function],
  "width": 960,
}
`;

exports[`public path should replace global publicPath 1`] = `
Object {
  "height": 900,
  "images": Array [
    Object {
      "height": 450,
      "path": "public/78a57c37d73de1a0df2e5e84a7c3a493-500.jpg",
      "width": 500,
    },
    Object {
      "height": 675,
      "path": "public/7d2980f5976397657aae4e66161cc660-750.jpg",
      "width": 750,
    },
    Object {
      "height": 900,
      "path": "public/03fe31cc7d34b5317390ef55eaf9bc12-1000.jpg",
      "width": 1000,
    },
  ],
  "src": "public/03fe31cc7d34b5317390ef55eaf9bc12-1000.jpg",
  "srcSet": "public/78a57c37d73de1a0df2e5e84a7c3a493-500.jpg 500w,public/7d2980f5976397657aae4e66161cc660-750.jpg 750w,public/03fe31cc7d34b5317390ef55eaf9bc12-1000.jpg 1000w",
  "toString": [Function],
  "width": 1000,
}
`;

exports[`rotates 90 1`] = `
Object {
  "height": 666,
  "images": Array [
    Object {
      "height": 666,
      "path": "foobar/d12957441af3a63cafef04b5b5496ca5-599.jpg",
      "width": 599,
    },
  ],
  "src": "foobar/d12957441af3a63cafef04b5b5496ca5-599.jpg",
  "srcSet": "foobar/d12957441af3a63cafef04b5b5496ca5-599.jpg 599w",
  "toString": [Function],
  "width": 599,
}
`;

exports[`single size 1`] = `
Object {
  "height": 450,
  "images": Array [
    Object {
      "height": 450,
      "path": "foobar/78a57c37d73de1a0df2e5e84a7c3a493-500.jpg",
      "width": 500,
    },
  ],
  "src": "foobar/78a57c37d73de1a0df2e5e84a7c3a493-500.jpg",
  "srcSet": "foobar/78a57c37d73de1a0df2e5e84a7c3a493-500.jpg 500w",
  "toString": [Function],
  "width": 500,
}
`;

exports[`with min and max sizes 1`] = `
Object {
  "height": 900,
  "images": Array [
    Object {
      "height": 450,
      "path": "foobar/78a57c37d73de1a0df2e5e84a7c3a493-500.jpg",
      "width": 500,
    },
    Object {
      "height": 675,
      "path": "foobar/7d2980f5976397657aae4e66161cc660-750.jpg",
      "width": 750,
    },
    Object {
      "height": 900,
      "path": "foobar/03fe31cc7d34b5317390ef55eaf9bc12-1000.jpg",
      "width": 1000,
    },
  ],
  "src": "foobar/03fe31cc7d34b5317390ef55eaf9bc12-1000.jpg",
  "srcSet": "foobar/78a57c37d73de1a0df2e5e84a7c3a493-500.jpg 500w,foobar/7d2980f5976397657aae4e66161cc660-750.jpg 750w,foobar/03fe31cc7d34b5317390ef55eaf9bc12-1000.jpg 1000w",
  "toString": [Function],
  "width": 1000,
}
`;

exports[`with min and max sizes options 1`] = `
Object {
  "height": 270,
  "images": Array [
    Object {
      "height": 90,
      "path": "foobar/302660d6c51872dc000ff683ee877462-100.jpg",
      "width": 100,
    },
    Object {
      "height": 150,
      "path": "foobar/3d5dc0fc5a237b83c829cfb24d8da8f8-167.jpg",
      "width": 167,
    },
    Object {
      "height": 211,
      "path": "foobar/24cd0dd10c97cfbe526cea6f82b27875-234.jpg",
      "width": 234,
    },
    Object {
      "height": 270,
      "path": "foobar/7c60c8715bec52ab753a83903b738d58-300.jpg",
      "width": 300,
    },
  ],
  "src": "foobar/7c60c8715bec52ab753a83903b738d58-300.jpg",
  "srcSet": "foobar/302660d6c51872dc000ff683ee877462-100.jpg 100w,foobar/3d5dc0fc5a237b83c829cfb24d8da8f8-167.jpg 167w,foobar/24cd0dd10c97cfbe526cea6f82b27875-234.jpg 234w,foobar/7c60c8715bec52ab753a83903b738d58-300.jpg 300w",
  "toString": [Function],
  "width": 300,
}
`;

exports[`with min and max sizes, and default steps 1`] = `
Object {
  "height": 900,
  "images": Array [
    Object {
      "height": 450,
      "path": "foobar/78a57c37d73de1a0df2e5e84a7c3a493-500.jpg",
      "width": 500,
    },
    Object {
      "height": 675,
      "path": "foobar/7d2980f5976397657aae4e66161cc660-750.jpg",
      "width": 750,
    },
    Object {
      "height": 900,
      "path": "foobar/03fe31cc7d34b5317390ef55eaf9bc12-1000.jpg",
      "width": 1000,
    },
  ],
  "src": "foobar/03fe31cc7d34b5317390ef55eaf9bc12-1000.jpg",
  "srcSet": "foobar/78a57c37d73de1a0df2e5e84a7c3a493-500.jpg 500w,foobar/7d2980f5976397657aae4e66161cc660-750.jpg 750w,foobar/03fe31cc7d34b5317390ef55eaf9bc12-1000.jpg 1000w",
  "toString": [Function],
  "width": 1000,
}
`;

exports[`with placeholder image 1`] = `
Object {
  "height": 675,
  "images": Array [
    Object {
      "height": 450,
      "path": "foobar/78a57c37d73de1a0df2e5e84a7c3a493-500.jpg",
      "width": 500,
    },
    Object {
      "height": 675,
      "path": "foobar/7d2980f5976397657aae4e66161cc660-750.jpg",
      "width": 750,
    },
    Object {
      "height": 900,
      "path": "foobar/03fe31cc7d34b5317390ef55eaf9bc12-1000.jpg",
      "width": 1000,
    },
  ],
  "placeholder": "data:image/jpeg;base64,/9j/2wBDAAUDBAQEAwUEBAQFBQUGBwwIBwcHBw8LCwkMEQ8SEhEPERETFhwXExQaFRERGCEYGh0dHx8fExciJCIeJBweHx7/2wBDAQUFBQcGBw4ICA4eFBEUHh4eHh4eHh4eHh4eHh4eHh4eHh4eHh4eHh4eHh4eHh4eHh4eHh4eHh4eHh4eHh4eHh7/wAARCAAkACgDASIAAhEBAxEB/8QAHAAAAgICAwAAAAAAAAAAAAAAAAcDBgEIAgQF/8QALRAAAQMDAgUEAQQDAAAAAAAAAQIDBAAFEQYhBxIxQVEIEyJhIxQycYFSgpH/xAAYAQADAQEAAAAAAAAAAAAAAAAAAQMCBP/EABwRAAMAAwADAAAAAAAAAAAAAAABAgMRMQQSIv/aAAwDAQACEQMRAD8A8q+enVqRPaFouMS3wyr8p9pZcQnwkZwo/Zxiukv0zvJujDjeqmnYYUS6l2GQ5jsBhWD95xWyTzrEaO7JfcbaYZSVuOK2SlIGSSe2KUWp/ULoy1yVMWuLMvRTsXWiGWifpStz/OK6HMrpNNlYvnpns8lort1+kxJG+5YSps/ynIx/RqrSfTlq2zyIk6z3a33N1pWXWlgsH/UnIO3nFNLQnHvTWoryxa51tk2d6SrkadceS40VdgSACnPkjFNZmbAkEexMivcx5RyPIVk+Nj1pOIpGpqpe0JTRvByQuS1N1a4wW0Hm/RMK5goj/NfcfQ6+aKeBQCMb/wB0VmMGOFpIrl8rLke6YlNVcPNfXWyyhqziM4/AjsLWttH421cqSfngJBG3U5rWn9H7istLQ62ADlHyyOm/it9pVviS4jsaWwl9p9JQ6y58kLB7EdDmqBfOEsWVq2BqG1pgwFRlJDjIjAtOJT+0hKcYUP8AnTxSqN8JKhC8NOGl6vjs18KTAftryUe3IBSrmKebpjbYim1wl4ZTNOa2j3tx9gMoQpcsc/NzvkKACRgfEZBye+avF9tN6WFISEKMr4uSW2/ycwHxJIOR4yelT8LLbf2NOqb1E648+mU57T6wAp1vIwSB074pKPoPZ6LgCle42HcUVgsFOSDtRVzBKlI5icnauK9jkE0UUPgGGVFQUVb1KrZAHmiihAA3GT1PWiiimB//2Q==",
  "src": "foobar/7d2980f5976397657aae4e66161cc660-750.jpg",
  "srcSet": "foobar/78a57c37d73de1a0df2e5e84a7c3a493-500.jpg 500w,foobar/7d2980f5976397657aae4e66161cc660-750.jpg 750w,foobar/03fe31cc7d34b5317390ef55eaf9bc12-1000.jpg 1000w",
  "toString": [Function],
  "width": 750,
}
`;

exports[`with size defined in webpack.config.js 1`] = `
Object {
  "height": 900,
  "images": Array [
    Object {
      "height": 450,
      "path": "foobar/78a57c37d73de1a0df2e5e84a7c3a493-500.jpg",
      "width": 500,
    },
    Object {
      "height": 675,
      "path": "foobar/7d2980f5976397657aae4e66161cc660-750.jpg",
      "width": 750,
    },
    Object {
      "height": 900,
      "path": "foobar/03fe31cc7d34b5317390ef55eaf9bc12-1000.jpg",
      "width": 1000,
    },
  ],
  "src": "foobar/03fe31cc7d34b5317390ef55eaf9bc12-1000.jpg",
  "srcSet": "foobar/78a57c37d73de1a0df2e5e84a7c3a493-500.jpg 500w,foobar/7d2980f5976397657aae4e66161cc660-750.jpg 750w,foobar/03fe31cc7d34b5317390ef55eaf9bc12-1000.jpg 1000w",
  "toString": [Function],
  "width": 1000,
}
`;
